# kawpow-miner

./: CMakeLists.txt  Makefile  Makefile-bk-2  kawpow-miner  kawpow_validator  kawpow_validator.cpp  keccakf1600.c  keccakf1600.h
base/: base.cmake
base/api/: Api.cpp  Api.h  Httpd.cpp  Httpd.h
base/api/interfaces/: IApiListener.h  IApiRequest.h
base/api/requests/: ApiRequest.cpp  ApiRequest.h  HttpApiRequest.cpp  HttpApiRequest.h
base/crypto/: Algorithm.cpp  Algorithm.h  Coin.cpp  Coin.h  keccak.cpp  keccak.h  sha3.cpp
base/io/: Async.cpp  Async.h  Console.cpp  Console.h  Env.cpp  Env.h  Signals.cpp  Signals.h  Watcher.cpp  Watcher.h
base/io/json/: Json.cpp  Json.h  JsonChain.cpp  JsonChain.h  JsonRequest.cpp  JsonRequest.h  Json_unix.cpp  Json_win.cpp
base/io/log/: FileLogWriter.cpp  FileLogWriter.h  Log.cpp  Log.h  Tags.cpp  Tags.h
base/kernel/: Base.cpp  Base.h  Entry.cpp  Entry.h  Platform.cpp  Platform.h  Platform_hwloc.cpp  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  Process.cpp  Process.h  Process_unix.cpp  Process_win.cpp  constants.h
base/kernel/config/: BaseConfig.cpp  BaseConfig.h  Title.cpp  (+3 more)
base/tools/: Alignment.h  Arguments.cpp  Arguments.h  Baton.h  Buffer.h  Chrono.cpp  Chrono.h  Cvt.cpp  Cvt.h  Handle.h  Object.h  Span.h  String.cpp  String.h  Timer.cpp  Timer.h  bswap_64.h
config/: config.json
include/: argon2.h  config.h  cuda_miner.h  hashing.h  kawpow.h  logging.h  stratum.h
include/libethash/: Makefile  ethash_internal.c
src/: config.cpp  hashing.cpp  kawpow.cu  kawpow_host.cpp  kernel.cu  main.cpp  stratum.cpp
(+127 files in other folders)
